<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_customer_services"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.csi.institutionsprofile.Activity.ActivityCustomerServices">
   <include layout="@layout/toolbar"/>
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="0dp"
       android:layout_below="@+id/toolbar"
       >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:paddingBottom="@dimen/activity_vertical_margin"
       android:layout_marginLeft="0dp"
       android:layout_marginRight="0dp"
       android:paddingTop="@dimen/activity_vertical_margin"
       android:orientation="vertical"
       android:layout_centerVertical="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true">
      <!--teletalk item-->
      <LinearLayout
          android:id="@+id/linearTeletalk"
          android:layout_width="match_parent"
          android:layout_height="90dp"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_marginRight="5dp"
          android:layout_marginLeft="5dp"
          android:layout_marginTop="5dp"
          android:elevation="10dp"
          android:background="@drawable/teletalk_box_style">
         <RelativeLayout
             android:layout_width="160dp"
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:background="@drawable/customer_smallbox_style"
             >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/teletalk"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="170dp"
             android:layout_height="match_parent"
             android:layout_weight=".90"
             >
         <TextView
             android:id="@+id/textViewMobileNoTeletalk"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/teletalkCustomerCare"
             android:gravity="left|center"
             android:layout_marginLeft="20dp"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:layout_gravity="center_horizontal"/>
         <RelativeLayout
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="15dp"
             android:layout_centerVertical="true"
             android:gravity="center"
             android:background="@drawable/call_background_style">
            <ImageView
                android:id="@+id/imageViewCallTeletalk"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/call_icon_white"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true" />
            </RelativeLayout>
         </RelativeLayout>

      </LinearLayout>
      <!--Rocket item-->
      <LinearLayout
          android:id="@+id/linearRocket"
          android:layout_width="match_parent"
          android:layout_height="90dp"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_marginRight="5dp"
          android:layout_marginLeft="5dp"
          android:layout_marginTop="10dp"
          android:elevation="10dp"
          android:background="@drawable/rocket_box_style">
         <RelativeLayout
             android:layout_width="160dp"
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:background="@drawable/customer_smallbox_style"
             >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/rocket"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="170dp"
             android:layout_height="match_parent"
             android:layout_weight=".90"
             >
            <TextView
                android:id="@+id/textViewMobileNoRocket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rocketCustomerCare"
                android:gravity="left|center"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"/>
            <RelativeLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:background="@drawable/call_background_style">
               <ImageView
                   android:id="@+id/imageViewCallRocket"
                   android:layout_width="20dp"
                   android:layout_height="match_parent"
                   android:src="@drawable/call_icon_white"
                   android:layout_gravity="center_horizontal"
                   android:layout_centerHorizontal="true" />
            </RelativeLayout>
         </RelativeLayout>

      </LinearLayout>
      <!--aghrani item-->
      <LinearLayout
          android:id="@+id/linearAghrani"
          android:layout_width="match_parent"
          android:layout_height="90dp"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_marginRight="5dp"
          android:layout_marginLeft="5dp"
          android:layout_marginTop="10dp"
          android:elevation="10dp"
          android:layout_marginBottom="20dp"
          android:background="@drawable/bkash_box_style">
         <RelativeLayout
             android:layout_width="160dp"
             android:layout_height="match_parent"
             android:layout_weight="0.1"
             android:background="@drawable/customer_smallbox_style"
             >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/agroni"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="170dp"
             android:layout_height="match_parent"
             android:layout_weight=".90"
             >
            <TextView
                android:id="@+id/textViewMobileNoBkash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bkashCustomerCare"
                android:gravity="left|center"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_gravity="center_horizontal"/>
            <RelativeLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:background="@drawable/call_background_style">
               <ImageView
                   android:id="@+id/imageViewCallBkash"
                   android:layout_width="20dp"
                   android:layout_height="match_parent"
                   android:src="@drawable/call_icon_white"
                   android:layout_gravity="center_horizontal"
                   android:layout_centerHorizontal="true" />
            </RelativeLayout>
         </RelativeLayout>

      </LinearLayout>


   </LinearLayout>
   </ScrollView>
</RelativeLayout>
